<resources>
    <string name="app_name">Покупатель</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <!-- Splash fragment -->
    <string name="background_image">Фон</string>
    <string name="splash_logo">логотип</string>
    <!-- Offline fragment -->
    <string name="you_are_offline">Вы оффлайн</string>
    <string name="unable_connect">Невозможно подключиться к серверу Фудвам.</string>
    <string name="check_connection">Проверьте подключение к Интернету и повторите попытку.</string>
    <string name="retry_connect">Обновить</string>
    <!-- Menu -->
    <string name="nav_main_title">Главная</string>
    <string name="nav_product_list_title">Каталог товаров</string>
    <string name="nav_cart_title">Корзина</string>
    <string name="nav_order_list_title">Список заказов</string>
    <string name="nav_registration_title">Регистрация</string>
    <string name="nav_login_title">Войти</string>
    <string name="nav_profile_title">Профиль</string>

    <!-- Main fragment -->
    <string name="main_fragment_title">Главная</string>
    <string name="header1">Ассортимент 16 800 наименований товаров</string>
    <string name="text1">Регулярные акции и распродажи могут существенно сэкономить Ваш бюджет, а при заказе продуктов с доставкой Вы экономите средства и на бензине, сохраняя свое время и нервы для более важных и действительно нужных дел!</string>
    <string name="header2">Доставка 24/7</string>
    <string name="text2">Наши курьеры работают в режиме 24/7, поэтому доставка продуктов на дом в Москве и области осуществляется круглосуточно и даже в праздничные дни. А интервалы доставки сокращены всего до 2-х часов!</string>
    <string name="header3">Контроль качества</string>
    <string name="text3">Прямые договоры с ведущими производителями и поставщиками, строгая система контроля качества на этапе приёмки, хранения и транспортировки – ключевые условия, благодаря которым Вы получаете только качественные продукты питания с доставкой на дом.</string>

    <!-- Product List fragment -->
    <string name="product_list_fragment_title">Товары раздела</string>

    <!-- Product fragment -->
    <string name="product_fragment_title">Товар</string>
    <string name="box_size">Упаковка</string>
    <string name="sku">Артикул</string>

    <!-- Login fragment -->
    <string name="email_address">Электронная почта</string>
    <string name="user_password">Пароль</string>
    <string name="sign_in">Войти</string>
    <string name="invalid_password">Неверный пароль</string>
    <string name="field_required">Поле не заполнено</string>
    <string name="invalid_email">Неверный email</string>


    <!-- Register fragment -->
    <string name="first_name">Ваше имя</string>
    <string name="last_name">Ваша фамилия</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="user_consent_text">Настоящим даю согласие на обработку моих персональных данных в порядке, установленном Федеральным законом РФ от 27.07.2006 № 152-ФЗ «О персональных данных».</string>
    <string name="register_in">Зарегистрироваться</string>
    <!-- Profile fragment -->
    <string name="phone_number">Телефон</string>
    <string name="invalid_phone">Неверный телефон</string>

</resources>
