<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/dimen16"
    android:orientation="vertical"
    tools:context="ru.customerapp.views.MainFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <ImageView
        android:id="@+id/ivPromo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:layout_gravity="center"
        android:layout_margin="@dimen/dimen8"
        app:srcCompat="@drawable/promo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey4"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginBottom="@dimen/dimen16"
        android:text="@string/header1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey3"
        android:text="@string/text1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey4"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginBottom="@dimen/dimen16"
        android:text="@string/header2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey3"
        android:text="@string/text2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey4"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/dimen16"
        android:layout_marginBottom="@dimen/dimen16"
        android:text="@string/header3"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey3"
        android:text="@string/text3"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
